{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 29,
  "lineage": "39770c7e-0be9-82a0-0d6d-486eecf7d958",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782682618608:security-group/sg-0ab997dafd786406e",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab997dafd786406e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01eef9467349c845f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-unzer20211114155911005700000001",
            "name_prefix": "dev-unzer",
            "owner_id": "782682618608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-unzer-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "dev-unzer-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4548f17f8a408be"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782682618608:security-group/sg-01eef9467349c845f",
            "description": "node group security group.",
            "egress": [],
            "id": "sg-01eef9467349c845f",
            "ingress": [],
            "name": "dev-unzer20211114155911006900000002",
            "name_prefix": "dev-unzer",
            "owner_id": "782682618608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-unzer-node_group_sg"
            },
            "tags_all": {
              "Name": "dev-unzer-node_group_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4548f17f8a408be"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3614958772",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ab997dafd786406e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster_sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2910800848",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ab997dafd786406e",
            "self": false,
            "source_security_group_id": "sg-01eef9467349c845f",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster_sg",
            "module.eks.aws_security_group.node_group_sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 22,
            "id": "sgrule-1624461340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01eef9467349c845f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.node_group_sg"
          ]
        }
      ]
    }
  ]
}